footer block contacts (align) fixed

--- a/css/main.css
+++ b/css/main.css
@@ -588,6 +588,9 @@ img {
     display: flex;
     justify-content: space-around;
   }
+  .footer__contacts {
+    text-align: center;
+  }
 }
 @media screen and (min-width: 1200px) {
   .footer__container {
@@ -601,6 +604,7 @@ img {
   }
   .footer__contacts {
     margin-right: 70px;
+    text-align: left;
   }
   .footer__join {
     margin-right: 93px;
